--- a/templates/snippets/messages.html
+++ b/templates/snippets/messages.html
@@ -5,7 +5,7 @@
             <div class="my-div-style w-100">
                 <ul class="messages" style="list-style:none;">
                     {% for message in messages %}
-                    <li>{% if message.tags %} class="{{message.tag}}" {% endif %}>
+                    <li {% if message.tags %} class="{{message.tags}}" {% endif %}>
                         {{message}}
                     </li>
                     {% endfor %}
