--- a/templates/top.html
+++ b/templates/top.html
@@ -1,12 +1,15 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block header %}
-{% include 'snippets/header.html' %}
-{% endblock  %} 
+{% extends 'base.html' %} {% load static %} {% block header %} 
+{% include 'snippets/header.html' %} 
+{% endblock %} 
+
 {% block main %}
 <div class="row">
-    <div class="col col-lg-8 col-md-6 col-sm-4 mx-auto">
-        <h1 class="header-h1">Weight & BMI Management</h1>
+    <div class="col-12 col-md-6 mx-auto">
+        <h1 class="header-h1 col col-md col-sm" id="top-logo">
+            Weight & BMI Management
+        </h1>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+<script src="{% static 'js/main.js' %}"></script>
 {% endblock %}
