--- a/templates/snippets/head.html
+++ b/templates/snippets/head.html
@@ -33,7 +33,7 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
     />
-    <link rel="icon" href={% static 'assets/favicon.ico' %} type="image/x-icon"
-    /> <link rel="stylesheet" href={% static '/css/style.css' %}>
+    <link rel="icon" href={% static 'assets/favicon.ico' %} type="image/x-icon"/> 
+    <link rel="stylesheet" href={% static '/css/style.css' %}>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
