--- a/templates/snippets/head.html
+++ b/templates/snippets/head.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" />
-    <link rel="icon" href={% static 'assets/favicon.ico' %} type="image/x-icon"/> 
+    {% comment %} <link rel="icon" href={% static 'assets/favicon.ico' %} type="image/x-icon"/>  {% endcomment %}
     <link rel="stylesheet" href={% static '/css/style.css' %}>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
