--- a/templates/pages/detail.html
+++ b/templates/pages/detail.html
@@ -1,5 +1,9 @@
-{% extends 'base.html' %} {% load static %} {% block header %} {% include
-'snippets/header.html' %} {% endblock %} {% block main %}
+{% extends 'base.html' %}
+{% load static %} 
+{% block header %} 
+{% include 'snippets/header.html' %} 
+{% endblock %} 
+{% block main %}
 <div class="container">
     <div class="row">
         <h3 class="chara_h2">体重 | BMI管理</h3>
