--- a/templates/top.html
+++ b/templates/top.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block header %} 
+{% extends 'base.html' %} 
+{% load static %} 
+{% block header %} 
 {% include 'snippets/header.html' %} 
 {% endblock %} 
 
