--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -11,7 +11,7 @@
             style="width: 22rem; height: 21rem"
         >
             <h3 class="login mt-3">Login</h3>
-            <img class="mb-1 text-align-center" src={% static "img/moon-stars-fill.svg" %} alt="" width="30" height="30">
+            <img class="mb-1 text-align-center" src={% static 'img/moon-stars-fill.svg/'' %} alt="" width="30" height="30">
             <div class="card-body mt-2">
                 <form method="POST">
                     {% csrf_token %}
