--- a/templates/pages/update.html
+++ b/templates/pages/update.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block main %}
+{% extends 'base.html' %} 
+{% load static %} 
+{% block main %}
 <div class="row">
     <div class="col-12 col-md-6 mx-auto update">
         <div
