--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -8,10 +8,9 @@
     <div class="col-12 col-md-6 mx-auto">
         <div
             class="card mt-5 mb-5 d-flex align-items-center mx-auto"
-            style="width: 22rem; height: 21rem"
-        >
+            style="width: 22rem; height: 21rem">
             <h3 class="login mt-3">Login</h3>
-            <img class="mb-1 text-align-center" src={% static 'img/moon-stars-fill.svg/'' %} alt="" width="30" height="30">
+            <img class="mb-1 text-align-center" src={% static 'img/moon-stars-fill.svg/' %} alt="" width="30" height="30">
             <div class="card-body mt-2">
                 <form method="POST">
                     {% csrf_token %}
