--- a/templates/pages/firstinput.html
+++ b/templates/pages/firstinput.html
@@ -16,17 +16,17 @@
                     </div>
                     <div class="mb-3 mt-3">
                         <label for="" class="form-label ms-5">身長 (cm)</label>
-                        <input type="text" class="form-control ms-5" id="" name="height" placeholder="身長" required />
+                        <input type="text" class="form-control ms-5" id="" name="height" placeholder="身長" required>
                     </div>
                     <div class="mb-3">
                         <label for="" class="form-label ms-5">体重 (kg)</label>
-                        <input type="text" class="form-control ms-5" id="" name="weight" placeholder="体重" required />
+                        <input type="text" class="form-control ms-5" id="" name="weight" placeholder="体重" required>
                     </div>
                     <div class="mb-3">
-                        <input type="hidden" class="form-control ms-5" id="" name="bmi" placeholder="BMI" required />
+                        <input type="hidden" class="form-control ms-5" id="" name="bmi" placeholder="BMI" required>
                     </div>
                     <div class="mb-3">
-                        <input type="hidden" class="form-control ms-5" id="" name="appr_w" placeholder="適正体重" required />
+                        <input type="hidden" class="form-control ms-5" id="" name="appr_w" placeholder="適正体重" required>
                     </div>
                     <div class="mb-3">
                         <label for="" class="form-label ms-5">Memo</label>
