--- a/templates/pages/update.html
+++ b/templates/pages/update.html
@@ -12,15 +12,15 @@
                 <div class="form-group update">
                     <div class="mb-3">
                         <label for="" class="form-label ms-5 mt-3">お名前</label>
-                        <input type="text" class="form-control ms-5" id="" aria-describedby="emailHelp" name="username" />
+                        <input type="text" class="form-control ms-5" id="" aria-describedby="emailHelp" name="username">
                     </div>
                     <div class="mb-3">
                         <label for="" class="form-label ms-5">身長 (cm)</label>
-                        <input type="text" class="form-control ms-5" id="" name="height" />
+                        <input type="text" class="form-control ms-5" id="" name="height">
                     </div>
                     <div class="mb-3">
                         <label for="" class="form-label ms-5">体重 (kg)</label>
-                        <input type="text" class="form-control ms-5" id="" name="weight" />
+                        <input type="text" class="form-control ms-5" id="" name="weight">
                     </div>
                     <div class="mb-3">
                         <label for="" class="form-label ms-5">Memo</label>
