--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -16,11 +16,11 @@
                     {% csrf_token %}
                     <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">メールアドレス</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" style="width: 18rem" name="username" required/>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" style="width: 18rem" name="username" required>
                     </div>
                     <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">パスワード</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" style="width: 18rem" name="password" required />
+                    <input type="password" class="form-control" id="exampleInputPassword1" style="width: 18rem" name="password" required>
                     </div>
                     <button type="submit" class="btn btn-primary">登録</button>
                 </form>
