--- a/templates/pages/detail.html
+++ b/templates/pages/detail.html
@@ -74,12 +74,12 @@
                     backgroundColor: "#FFB1C1",
                 },
                 {
-                    label: "適正体重",
+                    label: "適正体重(Kg)",
                     data: ["{{object.appr_w}}"],
                     backgroundColor: "#4169e1",
                 },
                 {
-                    label: "体重",
+                    label: "体重(Kg)",
                     data: ["{{object.weight}}"],
                     backgroundColor: "#ffa500",
                 },
